# selectivesearch

./: .gitignore  README.md  mkdocs.yml
cplusplus/: CMakeLists.txt
cplusplus/include/: edge.h  graphsegmentation.h  graphsegmentation_demo.h  graphsegmentationimpl.h  point_set.h  segmentation.h
cplusplus/include/graphsegment/: graphsegmentation.h  graphsegmentationimpl.h  point_set_element.h
cplusplus/include/selectivesearch/: neighbor.h  rect_comparator.h  region.h  selective_search_segmentation_strategy.h  selective_search_segmentation_strategy_color.h  selective_search_segmentation_strategy_color_impl.h  selective_search_segmentation_strategy_fill.h  selective_search_segmentation_strategy_fill_impl.h  selective_search_segmentation_strategy_multiple.h  selective_search_segmentation_strategy_multiple_impl.h  selective_search_segmentation_strategy_size.h  selective_search_segmentation_strategy_size_impl.h  selective_search_segmentation_strategy_texture.h  selective_search_segmentation_strategy_texture_impl.h  selectivesearchsegmentation.h  selectivesearchsegmentationimpl.h
cplusplus/samples/: graphsegmentation_demo.cpp  selectivesearchsegmentation.cpp  selectivesearchsegmentation_custom.cpp
cplusplus/samples/opencv/: graphsegmentation_demo.cpp  selectivesearchsegmentation_demo.cpp
cplusplus/src/: graphsegmentation.cpp  graphsegmentationimpl.cpp  neighbor.cpp  point_set.cpp  region.cpp  selective_search_segmentation_strategy_color.cpp  selective_search_segmentation_strategy_color_impl.cpp  selective_search_segmentation_strategy_fill.cpp  selective_search_segmentation_strategy_fill_impl.cpp  selective_search_segmentation_strategy_multiple.cpp  selective_search_segmentation_strategy_multiple_impl.cpp  selective_search_segmentation_strategy_size.cpp  selective_search_segmentation_strategy_size_impl.cpp  selective_search_segmentation_strategy_texture.cpp  selective_search_segmentation_strategy_texture_impl.cpp  selectivesearchsegmentation.cpp  selectivesearchsegmentationimpl.cpp
docs/: index.md  图分割-源码解析.md  图分割-算法解析.md  数据集制作.md  源码解析-图分割.md  类图.drawio  选择性搜索-源码解析.md  选择性搜索-算法解析.md
docs/mindmap/: 选择性搜索.emmx
docs/uml/: graphseg.puml  selectivesearch.puml  selectivesearchsegmentationstrategy.puml
mindmap/: 图分割.emmx
py/: requirements.txt  selectivesearchsegmentation_demo.py
samples/py/: selectivesearchsegmentation_demo.py
src/: __init__.py  bndbox_detect.py  create_initial_dataset.py  dataset.py  initial_train.py  lenet5.py  load_pascal_voc.py
